@@ -1,5 +1,5 @@
 /*
- * "$Id: client.c,v 1.91.2.32 2003/01/13 18:41:42 mike Exp $"
+ * "$Id: client.c,v 1.91.2.33 2003/01/13 20:38:37 mike Exp $"
  *
  *   Client routines for the Common UNIX Printing System (CUPS) scheduler.
  *
@@ -1807,6 +1807,14 @@ ShutdownClient(client_t *con)		/* I - Client connection */
   shutdown(con->http.fd, 0);
   con->http.used = 0;
 
+ /*
+  * Update the activity time so that we timeout after 30 seconds rather
+  * then the current Timeout setting (300 by default).  This prevents
+  * some DoS situations...
+  */
+
+  con->http.activity = time(NULL) - Timeout + 30;
+
   LogMessage(L_DEBUG2, "ShutdownClient: Removing fd %d from InputSet...",
              con->http.fd);
 
@@ -2696,5 +2704,5 @@ pipe_command(client_t *con,		/* I - Client connection */
 
 
 /*
- * End of "$Id: client.c,v 1.91.2.32 2003/01/13 18:41:42 mike Exp $".
+ * End of "$Id: client.c,v 1.91.2.33 2003/01/13 20:38:37 mike Exp $".
  */
