@@ -3,6 +3,10 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.19
 
+	- Now timeout connections that have been shutdown (due
+	  to errors) after 30 seconds instead of the Timeout
+	  setting (300 seconds by default).  This provides
+	  faster recovery from DoS attacks.
 	- A denial-of-service attack warning message was being
 	  written to the log files by the scheduler for every
 	  detection.  This caused a DoS of its own in some
